[gd_scene load_steps=64 format=3 uid="uid://dn8sujw4tlrla"]

[ext_resource type="Script" path="res://entities/enemies/bat.gd" id="1_h7rob"]
[ext_resource type="Texture2D" uid="uid://brxeaxkusiswl" path="res://art/spritesheets/enemies/bat_fly.png" id="2_qrey8"]
[ext_resource type="Texture2D" uid="uid://do7lbpjp1ea10" path="res://art/spritesheets/enemies/enemy_death.png" id="3_fr24o"]
[ext_resource type="Texture2D" uid="uid://5wj13grobdqm" path="res://art/spritesheets/enemies/bat_idle.png" id="3_x8olj"]
[ext_resource type="Texture2D" uid="uid://5xuf0kpnp6g2" path="res://art/spritesheets/enemies/bat_stare.png" id="4_3wk8g"]
[ext_resource type="PackedScene" uid="uid://dsc4vj8608r1r" path="res://audio/death_sound.tscn" id="5_kbjud"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i2mtw"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7tynw"]
atlas = ExtResource("3_fr24o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvmc1"]
atlas = ExtResource("3_fr24o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u236t"]
atlas = ExtResource("3_fr24o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_goaxy"]
atlas = ExtResource("3_fr24o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlj2t"]
atlas = ExtResource("3_fr24o")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilvqe"]
atlas = ExtResource("3_fr24o")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjven"]
atlas = ExtResource("3_fr24o")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8a2p"]
atlas = ExtResource("3_fr24o")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75u5s"]
atlas = ExtResource("2_qrey8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci6bg"]
atlas = ExtResource("2_qrey8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lyd0"]
atlas = ExtResource("3_x8olj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivt7c"]
atlas = ExtResource("4_3wk8g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thul7"]
atlas = ExtResource("4_3wk8g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeagw"]
atlas = ExtResource("4_3wk8g")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m72i"]
atlas = ExtResource("4_3wk8g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_51f0s"]
atlas = ExtResource("4_3wk8g")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hflt2"]
atlas = ExtResource("4_3wk8g")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3dsu"]
atlas = ExtResource("4_3wk8g")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f87pw"]
atlas = ExtResource("4_3wk8g")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh3nj"]
atlas = ExtResource("4_3wk8g")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpklp"]
atlas = ExtResource("4_3wk8g")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x4d1"]
atlas = ExtResource("4_3wk8g")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn51s"]
atlas = ExtResource("4_3wk8g")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7kmj"]
atlas = ExtResource("4_3wk8g")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4smv2"]
atlas = ExtResource("4_3wk8g")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydvji"]
atlas = ExtResource("4_3wk8g")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksv5w"]
atlas = ExtResource("4_3wk8g")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrc60"]
atlas = ExtResource("4_3wk8g")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_diulh"]
atlas = ExtResource("4_3wk8g")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sxah"]
atlas = ExtResource("4_3wk8g")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_en7py"]
atlas = ExtResource("4_3wk8g")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftqk0"]
atlas = ExtResource("4_3wk8g")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an65h"]
atlas = ExtResource("4_3wk8g")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqwui"]
atlas = ExtResource("4_3wk8g")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_353sq"]
atlas = ExtResource("4_3wk8g")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4ifq"]
atlas = ExtResource("4_3wk8g")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8mjb"]
atlas = ExtResource("4_3wk8g")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6nyr"]
atlas = ExtResource("4_3wk8g")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i03j3"]
atlas = ExtResource("4_3wk8g")
region = Rect2(864, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwcwn"]
atlas = ExtResource("4_3wk8g")
region = Rect2(896, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf2f7"]
atlas = ExtResource("4_3wk8g")
region = Rect2(928, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hq57"]
atlas = ExtResource("4_3wk8g")
region = Rect2(960, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggs10"]
atlas = ExtResource("4_3wk8g")
region = Rect2(992, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuufm"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1024, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucr0g"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1056, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25r8p"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1088, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu67v"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1120, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmgm7"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1152, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a1lp"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1184, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoonm"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1216, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi6dx"]
atlas = ExtResource("4_3wk8g")
region = Rect2(1248, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x58jq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tynw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvmc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u236t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goaxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlj2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilvqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjven")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8a2p")
}],
"loop": false,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75u5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci6bg")
}],
"loop": true,
"name": &"Fly",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lyd0")
}],
"loop": false,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivt7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thul7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeagw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m72i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51f0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hflt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3dsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f87pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh3nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpklp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x4d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn51s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7kmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4smv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydvji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksv5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrc60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diulh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sxah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en7py")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftqk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an65h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_353sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4ifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8mjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6nyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i03j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwcwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf2f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hq57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggs10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuufm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucr0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25r8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu67v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmgm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a1lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoonm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi6dx")
}],
"loop": true,
"name": &"Stare",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bfk8i"]
radius = 108.074

[sub_resource type="CircleShape2D" id="CircleShape2D_40pol"]
radius = 272.046

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a46y5"]
size = Vector2(23, 8.875)

[sub_resource type="CircleShape2D" id="CircleShape2D_t1jx7"]
radius = 16.0

[node name="Bat" type="CharacterBody2D"]
position = Vector2(0, -16)
script = ExtResource("1_h7rob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_i2mtw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_x58jq")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
shape = SubResource("CircleShape2D_bfk8i")

[node name="WarningDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WarningDetection"]
visible = false
shape = SubResource("CircleShape2D_40pol")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(-4, -25)
shape = SubResource("RectangleShape2D_a46y5")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-4, -9)
shape = SubResource("CircleShape2D_t1jx7")

[node name="DeathSound" parent="." instance=ExtResource("5_kbjud")]

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="WarningDetection" to="." method="_on_warning_detection_body_entered"]
[connection signal="body_exited" from="WarningDetection" to="." method="_on_warning_detection_body_exited"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
